versioned_docs/version-4.2/client-api/operations/compare-exchange/put-compare-exchange-value.mdx
---
title: "Compare Exchange: How to Put Compare Exchange Value"
hide_table_of_contents: true
sidebar_label: Put Compare Exchange
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java"];


# Compare Exchange: How to Put Compare Exchange Value
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Use `PutCompareExchangeValueOperation` to save a compare-exchange _Value_ for the specified _Key_.  

* Create a new _Key_ or modify an existing one.  

* The _Value_ is saved only if the index passed is equal to the index currently stored in the server for the specified _Key_.  

* For an overview of the 'Compare Exchange' feature click: [Compare Exchange Overview](../../../client-api/operations/compare-exchange/overview.mdx)  

* In this page:  
  * [Syntax](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#syntax)  
  * [Example I - Create a New Key](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#example-i---create-a-new-key)  
  * [Example II - Update an Existing Key](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#example-ii---update-an-existing-key)  
</Admonition>
## Syntax

**Method**:
<TabItem value="put_0" label="put_0">
<CodeBlock language="csharp">
{`public PutCompareExchangeValueOperation(string key, T value, long index)
`}
</CodeBlock>
</TabItem>

| Parameter | Type | Description |
| ----------| ---- |------------ |
| **key** | string | Object identifier under which _value_ is saved, unique in the database scope across the cluster. This string can be up to 512 bytes. |
| **value** | `T` | The value to be saved for the specified _key_. |
| **index** | long | * `0` if creating a new key
* The current version of _Value_ when updating a value for an existing key. |

**Returned object**:
<TabItem value="compare_exchange_result" label="compare_exchange_result">
<CodeBlock language="csharp">
{`public class CompareExchangeResult<T>
\{
    public bool Successful;
    public T Value;
    public long Index;
\}
`}
</CodeBlock>
</TabItem>

| Return Value | Type | Description |
| ------------ | - | - |
| **Successful** | bool | * _True_ if the save operation has completed successfully
* _False_ if the save operation failed |
| **Value** | `T` | * The value that was saved if operation was successful
* The currently existing value in the server upon failure |
| **Index** | long | * The version number of the value that was saved upon success
* The currently existing version number in the server upon failure |

<Admonition type="note" title="Note:" id="note" href="#note">
When calling the 'Put' operation, the index from the request is compared to the index that is currently stored in the server (compare stage).  
The value is updated only if the two are **equal** (exchange stage).  
</Admonition>


## Example I - Create a New Key

<TabItem value="put_1" label="put_1">
<CodeBlock language="csharp">
{`CompareExchangeResult<string> compareExchangeResult
    = store.Operations.Send(
        new PutCompareExchangeValueOperation<string>("Emails/foo@example.org", "users/123", 0));

bool successful = compareExchangeResult.Successful;
// If successfull is true: then Key 'foo@example.org' now has the value of "users/123"
`}
</CodeBlock>
</TabItem>


## Example II - Update an Existing Key

<TabItem value="put_2" label="put_2">
<CodeBlock language="csharp">
{`// Get existing value
CompareExchangeValue<User> readResult =
    store.Operations.Send(
        new GetCompareExchangeValueOperation<User>("AdminUser"));

readResult.Value.Age++;

// Update value
CompareExchangeResult<User> saveResult
    = store.Operations.Send(
        new PutCompareExchangeValueOperation<User>("AdminUser", readResult.Value, readResult.Index));

// The save result is successful only if 'index' wasn't changed between the read and write operations
bool saveResultSuccessful = saveResult.Successful;
`}
</CodeBlock>
</TabItem>



</LanguageContent>
<LanguageContent language="java">

<Admonition type="note" title="Note">

* Use `PutCompareExchangeValueOperation` to save a compare-exchange _Value_ for the specified _Key_.  

* Create a new _Key_ or modify an existing one.  

* The _Value_ is saved only if the index passed is equal to the index currently stored in the server for the specified _Key_.  

* For an overview of the 'Compare Exchange' feature click: [Compare Exchange Overview](../../../client-api/operations/compare-exchange/overview.mdx)  

* In this page:  
  * [Syntax](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#syntax)  
  * [Example I - Create a New Key](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#example-i---create-a-new-key)  
  * [Example II - Update an Existing Key](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#example-ii---update-an-existing-key)  
</Admonition>
## Syntax

**Method**:
<TabItem value="put_0" label="put_0">
<CodeBlock language="java">
{`public PutCompareExchangeValueOperation(String key, T value, long index)
`}
</CodeBlock>
</TabItem>

| Parameter | Type | Description |
| ----------| ---- |------------ |
| **key** | String | Object identifier under which _value_ is saved, unique in the database scope across the cluster. This string can be up to 512 bytes. |
| **value** | `T` | The value to be saved for the specified _key_. |
| **index** | long |  * `0` if creating a new key
* The current version of _Value_ when updating a value for an existing key. |

**Returned object**:
<TabItem value="compare_exchange_result" label="compare_exchange_result">
<CodeBlock language="java">
{`public class CompareExchangeResult<T> \{
    private T value;
    private long index;
    private boolean successful;

    public T getValue() \{
        return value;
    \}

    public void setValue(T value) \{
        this.value = value;
    \}

    public long getIndex() \{
        return index;
    \}

    public void setIndex(long index) \{
        this.index = index;
    \}

    public boolean isSuccessful() \{
        return successful;
    \}

    public void setSuccessful(boolean successful) \{
        this.successful = successful;
    \}
\}
`}
</CodeBlock>
</TabItem>

| Return Value | Type | Description |
| ------------ | - | - |
| **Successful** | boolean | * _True_ if the save operation has completed successfully
* _False_ if the save operation failed |
| **Value** | `T` | * The value that was saved if operation was successful
* The currently existing value in the server upon failure |
| **Index** | long | * The version number of the value that was saved upon success
* The currently existing version number in the server upon failure |

<Admonition type="note" title="Note:" id="note" href="#note">
When calling the 'Put' operation, the index from the request is compared to the index that is currently stored in the server (compare stage).  
The value is updated only if the two are **equal** (exchange stage).  
</Admonition>


## Example I - Create a New Key

<TabItem value="put_1" label="put_1">
<CodeBlock language="java">
{`CompareExchangeResult<String> compareExchangeResult = store.operations().send(
    new PutCompareExchangeValueOperation<>("Emails/foo@example.org", "users/123", 0));

boolean successful = compareExchangeResult.isSuccessful();
// If successful is true: then Key 'foo@example.org' now has the value of "users/123"
`}
</CodeBlock>
</TabItem>


## Example II - Update an Existing Key

<TabItem value="put_2" label="put_2">
<CodeBlock language="java">
{`// Get existing value
CompareExchangeValue<User> readResult
    = store.operations().send(
        new GetCompareExchangeValueOperation<>(User.class, "AdminUser"));

readResult.getValue().setAge(readResult.getValue().getAge() + 1);

// Update value
CompareExchangeResult<User> saveResult
    = store.operations().send(
        new PutCompareExchangeValueOperation<>("AdminUser", readResult.getValue(), readResult.getIndex()));

// The save result is successful only if 'index' wasn't changed between the read and write operations
boolean saveResultSuccessful = saveResult.isSuccessful();
`}
</CodeBlock>
</TabItem>



</LanguageContent>

<!---
### Compare Exchange
- [Overview](../../../client-api/operations/compare-exchange/overview)
- [Get a Compare-Exchange Value](../../../client-api/operations/compare-exchange/get-compare-exchange-value)
- [Get Compare-Exchange Values](../../../client-api/operations/compare-exchange/get-compare-exchange-values)
- [Delete a Compare-Exchange Value](../../../client-api/operations/compare-exchange/delete-compare-exchange-value)


-->