versioned_docs/version-5.4/client-api/operations/compare-exchange/put-compare-exchange-value.mdx
---
title: "Put Compare Exchange Operation"
hide_table_of_contents: true
sidebar_label: Put Compare Exchange
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Put Compare Exchange Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Use `PutCompareExchangeValueOperation` to save a compare-exchange _Value_ for the specified _Key_.  

* Create a new _Key_ or modify an existing one.  

* The _Value_ is saved only if the _index_ passed is equal to the _index_ currently stored in the server for the specified _Key_.  

* For an overview of the 'Compare Exchange' feature see: [Compare Exchange Overview](../../../client-api/operations/compare-exchange/overview.mdx).

* In this page:  
  * [Syntax](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#syntax)  
  * [Example I - Create a new key](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#example-i---create-a-new-key)  
  * [Example II - Update an existing key](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#example-ii---update-an-existing-key)  
</Admonition>
## Syntax

**Method**:
<TabItem value="put_0" label="put_0">
<CodeBlock language="csharp">
{`public PutCompareExchangeValueOperation(string key, T value, long index)
`}
</CodeBlock>
</TabItem>

| Parameter | Type | Description |
| ----------| ---- |------------ |
| **key** | string | Object identifier under which _value_ is saved, unique in the database scope across the cluster. This string can be up to 512 bytes. |
| **value** | `T` | The value to be saved for the specified _key_. |
| **index** | long | * `0` if creating a new key
* The current version of _Value_ when updating a value for an existing key. |

**Returned object**:
<TabItem value="compare_exchange_result" label="compare_exchange_result">
<CodeBlock language="csharp">
{`public class CompareExchangeResult<T>
\{
    public bool Successful;
    public T Value;
    public long Index;
\}
`}
</CodeBlock>
</TabItem>

| Return Value | Type | Description |
| ------------ | - | - |
| **Successful** | bool | * _True_ if the save operation has completed successfully
* _False_ if the save operation failed |
| **Value** | `T` | * The value that was saved if operation was successful
* The currently existing value in the server upon failure |
| **Index** | long | * The version number of the value that was saved upon success
* The currently existing version number in the server upon failure |

<Admonition type="note" title="Note:" id="note" href="#note">
When calling the 'Put' operation, the index from the request is compared to the index that is currently stored in the server (compare stage).  
The value is updated only if the two are **equal** (exchange stage).  
</Admonition>


## Example I - Create a new key

<TabItem value="put_1" label="put_1">
<CodeBlock language="csharp">
{`CompareExchangeResult<string> compareExchangeResult
    = store.Operations.Send(
        new PutCompareExchangeValueOperation<string>("Emails/foo@example.org", "users/123", 0));

bool successful = compareExchangeResult.Successful;
// If successfull is true: then Key 'foo@example.org' now has the value of "users/123"
`}
</CodeBlock>
</TabItem>


## Example II - Update an existing key

<TabItem value="put_2" label="put_2">
<CodeBlock language="csharp">
{`// Get existing value
CompareExchangeValue<User> readResult =
    store.Operations.Send(
        new GetCompareExchangeValueOperation<User>("AdminUser"));

readResult.Value.Age++;

// Update value
CompareExchangeResult<User> saveResult
    = store.Operations.Send(
        new PutCompareExchangeValueOperation<User>("AdminUser", readResult.Value, readResult.Index));

// The save result is successful only if 'index' wasn't changed between the read and write operations
bool saveResultSuccessful = saveResult.Successful;
`}
</CodeBlock>
</TabItem>



</LanguageContent>
<LanguageContent language="java">

<Admonition type="note" title="Note">

* Use `PutCompareExchangeValueOperation` to save a compare-exchange _Value_ for the specified _Key_.  

* Create a new _Key_ or modify an existing one.  

* The _Value_ is saved only if the _index_ passed is equal to the _index_ currently stored in the server for the specified _Key_.  

* For an overview of the 'Compare Exchange' feature see: [Compare Exchange Overview](../../../client-api/operations/compare-exchange/overview.mdx).

* In this page:
  * [Syntax](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#syntax)
  * [Example I - Create a new key](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#example-i---create-a-new-key)  
  * [Example II - Update an existing key](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#example-ii---update-an-existing-key)
</Admonition>
## Syntax

**Method**:
<TabItem value="put_0" label="put_0">
<CodeBlock language="java">
{`public PutCompareExchangeValueOperation(String key, T value, long index)
`}
</CodeBlock>
</TabItem>

| Parameter | Type | Description |
| ----------| ---- |------------ |
| **key** | String | Object identifier under which _value_ is saved, unique in the database scope across the cluster. This string can be up to 512 bytes. |
| **value** | `T` | The value to be saved for the specified _key_. |
| **index** | long |  * `0` if creating a new key
* The current version of _Value_ when updating a value for an existing key. |

**Returned object**:
<TabItem value="compare_exchange_result" label="compare_exchange_result">
<CodeBlock language="java">
{`public class CompareExchangeResult<T> \{
    private T value;
    private long index;
    private boolean successful;

    public T getValue() \{
        return value;
    \}

    public void setValue(T value) \{
        this.value = value;
    \}

    public long getIndex() \{
        return index;
    \}

    public void setIndex(long index) \{
        this.index = index;
    \}

    public boolean isSuccessful() \{
        return successful;
    \}

    public void setSuccessful(boolean successful) \{
        this.successful = successful;
    \}
\}
`}
</CodeBlock>
</TabItem>

| Return Value | Type | Description |
| ------------ | - | - |
| **Successful** | boolean | * _True_ if the save operation has completed successfully
* _False_ if the save operation failed |
| **Value** | `T` | * The value that was saved if operation was successful
* The currently existing value in the server upon failure |
| **Index** | long | * The version number of the value that was saved upon success
* The currently existing version number in the server upon failure |

<Admonition type="note" title="Note:" id="note" href="#note">
When calling the 'Put' operation, the index from the request is compared to the index that is currently stored in the server (compare stage).  
The value is updated only if the two are **equal** (exchange stage).  
</Admonition>


## Example I - Create a new key

<TabItem value="put_1" label="put_1">
<CodeBlock language="java">
{`CompareExchangeResult<String> compareExchangeResult = store.operations().send(
    new PutCompareExchangeValueOperation<>("Emails/foo@example.org", "users/123", 0));

boolean successful = compareExchangeResult.isSuccessful();
// If successful is true: then Key 'foo@example.org' now has the value of "users/123"
`}
</CodeBlock>
</TabItem>


## Example II - Update an existing key

<TabItem value="put_2" label="put_2">
<CodeBlock language="java">
{`// Get existing value
CompareExchangeValue<User> readResult
    = store.operations().send(
        new GetCompareExchangeValueOperation<>(User.class, "AdminUser"));

readResult.getValue().setAge(readResult.getValue().getAge() + 1);

// Update value
CompareExchangeResult<User> saveResult
    = store.operations().send(
        new PutCompareExchangeValueOperation<>("AdminUser", readResult.getValue(), readResult.getIndex()));

// The save result is successful only if 'index' wasn't changed between the read and write operations
boolean saveResultSuccessful = saveResult.isSuccessful();
`}
</CodeBlock>
</TabItem>



</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">


* Use the `PutCompareExchangeValueOperation` operation to either:
  * __Create__ a new compare-exchange item  
  * __Update__ the value or metadata of an existing compare-exchange item

* Compare-exchange items can also be managed via [advanced session](../../../client-api/session/cluster-transaction/compare-exchange.mdx) methods 
  or from the [Studio](../../../studio/database/documents/compare-exchange-view.mdx).
  
* In this page:  
  * [Create new cmpXchg item](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#create-new-cmpxchg-item)  
  * [Create new cmpXchg item with metadata](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#create-new-cmpxchg-item-with-metadata)  
  * [Update existing cmpXchg item](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#update-existing-cmpxchg-item)
  * [Syntax](../../../client-api/operations/compare-exchange/put-compare-exchange-value.mdx#syntax)

</Admonition>
## Create new cmpXchg item

<TabItem value="put_1" label="put_1">
<CodeBlock language="js">
{`// Create a new CmpXchg item:
// ==========================

// Define the put compare-exchange operation. Pass:
// * KEY: a new unique identifier (e.g. a user's email)
// * VALUE: an associated value (e.g. the user's name)
// * INDEX: pass '0' to indicate that this is a new key
const putCmpXchgOp = new PutCompareExchangeValueOperation("johnDoe@gmail.com", "John Doe", 0);

// Execute the operation by passing it to operations.send
const result = await documentStore.operations.send(putCmpXchgOp);

// Check results
const successful = result.successful; // Has operation succeeded
const indexForItem = result.index;    // The version number assigned to the new item

// If successful is true then a new compare-exchange item has been created
// with the unique email key and the associated value.
`}
</CodeBlock>
</TabItem>

* Note:  
  Using `0` with a key that already exists will Not modify existing compare-exchange item.



## Create new cmpXchg item with metadata

<TabItem value="put_2" label="put_2">
<CodeBlock language="js">
{`// Create a new CmpXchg item with metadata:
// ========================================

// Define the put compare-exchange operation.
// Pass a 4'th parameter with the metadata object.
const putCmpXchgOp = new PutCompareExchangeValueOperation("+48-123-456-789", "John Doe", 0,
    \{ 
        "Provider": "T-Mobile",
        "Network": "5G",
        "Work phone": false
    \});

// Execute the operation by passing it to operations.send
const result = await documentStore.operations.send(putCmpXchgOp);

// Check results
const successful = result.successful; // Has operation succeeded
const indexForItem = result.index;    // The version number assigned to the new item

// If successful is true then a new compare-exchange item has been created
// with the unique phone number key, value, and metadata.
`}
</CodeBlock>
</TabItem>

* Find more examples of adding metadata to a compare-exchange item in [compare-exchange metadata](../../../client-api/operations/compare-exchange/compare-exchange-metadata.mdx).



## Update existing cmpXchg item

* When calling `PutCompareExchangeValueOperation`,  
  the index from the request is compared to the index that is currently stored in the server for the specified _key_.
* The compare-exchange item is updated only if the two are equal.

<TabItem value="put_3" label="put_3">
<CodeBlock language="js">
{`// Modify an existing CmpXchg item:
// ================================

// Get the existing compare-exchange item
const item = await documentStore.operations.send(
    new GetCompareExchangeValueOperation("+48-123-456-789")
);

// Make some changes
const newValue = "Jane Doe";
const metadata = item.metadata;
metadata["Work phone"] = true;

// Update the compare-exchange item:
// The put operation will succeed only if the 'index' of the compare-exchange item
// has not changed between the read and write operations.
const result = await documentStore.operations.send(
    new PutCompareExchangeValueOperation("+48-123-456-789", newValue, item.index, metadata)
);

// Check results
const successful = result.successful; // Has operation succeeded
const newIndex = result.index;        // The new version number assigned to the item 

// Version has increased
assert(newIndex > item.index);
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="js">
{`// Available overloads:
// ====================
const putCmpXchgOp = new PutCompareExchangeValueOperation(key, value, index);
const putCmpXchgOp = new PutCompareExchangeValueOperation(key, value, index, metadata);
`}
</CodeBlock>
</TabItem>

| Parameter     | Type      | Description                                                                                                                                 |
|---------------|-----------|---------------------------------------------------------------------------------------------------------------------------------------------|
| __key__       | string    | &lt;ul&gt;&lt;li&gt;A unique identifier in the database scope.&lt;/li&gt;&lt;li&gt;Can be up to 512 bytes.&lt;/li&gt;&lt;ul&gt;                                                 |
| __value__     | object    | &lt;ul&gt;&lt;li&gt;A value to be saved for the specified _key_.&lt;/li&gt;&lt;li&gt;Can be any object (number, string, array, or any valid JSON object).&lt;/li&gt;&lt;/ul&gt; |
| __index__     | number    | &lt;ul&gt;&lt;li&gt;Pass `0` to create a new key.&lt;/li&gt;&lt;li&gt;When updating an existing key, pass the current number for concurrency control.&lt;/li&gt;&lt;ul&gt;      |
| __metadata__  | object    | &lt;ul&gt;&lt;li&gt;Metadata to be saved for the specified _key_.&lt;/li&gt;&lt;li&gt;Must be a valid JSON object.&lt;/li&gt;&lt;/ul&gt;                                        |

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="js">
{`// Return value of store.operations.send(putCmpXchgOp)
// ===================================================
class CompareExchangeResult \{
    successful;
    value;
    index;
\}
`}
</CodeBlock>
</TabItem>

| Return Value   | Type    | Description                                                                                                                                                                                                                                                                                                     |
|----------------|---------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| __successful__ | boolean | &lt;ul&gt;&lt;li&gt;`true` if the put operation has completed successfully.&lt;/li&gt;&lt;li&gt;`false` if the put operation has failed.&lt;/li&gt;&lt;/ul&gt;                                                                                                                                                                                      |
| __value__      | object  | &lt;ul&gt;&lt;li&gt;Upon success - the value of the compare-exchange item that was saved.&lt;/li&gt;&lt;li&gt;Upon failure - the existing value on the server.&lt;/li&gt;&lt;/ul&gt;                                                                                                                                                                |
| __index__      | number  | &lt;ul&gt;&lt;li&gt;The compare-exchange item's version.&lt;/li&gt;&lt;li&gt;This number increases with each successful modification of the `value` or `metadata`.&lt;/li&gt;&lt;li&gt;Upon success - the updated version of the compare-exchange item that was saved.&lt;/li&gt;&lt;li&gt;Upon failure - the existing version number in the server.&lt;/li&gt;&lt;/ul&gt; |




</LanguageContent>

<!---
### Compare Exchange
- [Overview](../../../client-api/operations/compare-exchange/overview)
- [Get compare-exchange value](../../../client-api/operations/compare-exchange/get-compare-exchange-value)
- [Get compare-exchange values](../../../client-api/operations/compare-exchange/get-compare-exchange-values)
- [Delete compare-exchange](../../../client-api/operations/compare-exchange/delete-compare-exchange-value)


-->